# True-Colors-Discord-Bot

./: .env-sample  TrueColours.py  example.py  main.py  pyproject.toml  questions.json  requirements.txt
